# mcpstack-mimic

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mcpstack_tool.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: publish.yaml
scripts/: bootstrap.py
scripts/scaffold/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
scripts/scaffold/.github/ISSUE_TEMPLATE/: config.yml
scripts/scaffold/.github/workflows/: pre-commit.yaml  publish.yaml  tests.yaml
scripts/scaffold/src/mcpstack_your_tool_name/: __init__.py  tool.py
src/mcpstack_your_tool_name/: cli.py
tests/: test_tool.py
