[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mcpstack-your-tool-name"
version = "0.1.0"
description = "Create your MCPStack tool with this template repository!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Provost Simon", email = "s.g.provost@kent.ac.uk" }]
keywords = ["mcp", "mcpstack", "mcpPipeline", "tool", "template"]
dependencies = [
  "typer>=0.9.0",
  "beartype>=0.21.0",
  "rich>=13.0.0",
  "rich-argparse>=1.4.0",
  "mcpstack",
  "rich-pyfiglet>=1.0.0",
  "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4.0",
  "pre-commit>=3.0.0"
]

# Let MCPStack discover external tools via entry points
[project.entry-points."mcpstack.tools"]
your_tool_name = "mcpstack_your_tool_name.tool:YourTool"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E","W","F","I","UP","RUF","B","C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv.sources]
mcpstack = { path = "../MCPStack" }
